style.css
body {
    background-image: url("images/p1.jpg");
    background-size: 100%;
}
#logoimg {
    float: left;
    width: 100px;
    height: 100px;
    background: #555;
}
#hf{
    font-family:Impact, Charcoal, sans-serif;
    font-size: 150%;
    color: white;
    position: relative;
}
#hf2{
  font-family:Impact, Charcoal, sans-serif; 
  font-size: 200%; 
  color: white;
  text-align: center;
}
#hf3{
  font-family:Verdana, Geneva, Tahoma, sans-serif;
  font-size: 100%; 
  color: white;
  text-align: center;
}
#names{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 70%;
    color: white;
}
#welcomebutton{
    background-color:  #f41e1e;
    border: 1px solid rgb(235, 80, 75);
    color: white;
    padding: 16px 32px;
    text-align: center;
    font-size: 16px;
    margin: 4px 2px;
    opacity: 0.6;
    font-family:Impact, Charcoal, sans-serif;
    text-decoration: none;
    align-content: center;
}
button {
    background-color: #f41e1e;
    border: 1px solid rgb(235, 80, 75);
    color: white;
    padding: 16px 32px;
    text-align: center;
    font-size: 16px;
    margin: 4px 2px;
    opacity: 0.6;
    transition: 0.3s;
    font-family:Impact, Charcoal, sans-serif;
    text-decoration: none;
    cursor: pointer;
    float: left;
  }
  
button:hover {opacity: 1}

button:active {
  background-color: rgb(241, 92, 72);
  box-shadow: 0 5px rgb(255, 155, 155);
  /* transform: translateY(4px); */
}

#gameArea{
    background-color: aquamarine;
    width:100%;
    height:100%;
}

  /* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /*Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }
  
  /* Modal Content/Box */
  .modal-content {
    background-color: black;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    width: 50%; /* Could be more or less, depending on screen size */
  }
  
  
  /* The Close Button */
  .close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }
  

  /* form style */
  .form-style-7{
    max-width:400px;
    margin:50px auto;
    background:black;
    border-radius:2px;
    border: 1px solid  yellow;
    padding:20px;
    font-family: Georgia, "Times New Roman", Times, serif;
  }
  .form-style-7 h1{
    display: block;
    text-align: center;
    padding: 0;
    margin: 0px 0px 20px 0px;
    color: rgb(255, 255, 255);
    font-size:x-large;
  }
  .form-style-7 ul{
    list-style:none;
    padding:0;
    margin:0;	
  }
  .form-style-7 li{
    display: block;
    padding: 9px;
    border:1px solid rgb(19, 4, 99);
    margin-bottom: 30px;
    border-radius: 3px;
  }
  .form-style-7 li:last-child{
    border:none;
    margin-bottom: 0px;
    text-align: center;
  }
  .form-style-7 li > label{
    display: block;
    float: left;
    margin-top: -19px;
    background: black;
    height: 14px;
    padding: 2px 5px 2px 5px;
    color: white;
    font-size: 14px;
    overflow: hidden;
    font-family: Arial, Helvetica, sans-serif;
  }
  .form-style-7 input[type="text"],
  .form-style-7 input[type="date"],
  .form-style-7 input[type="email"],
  .form-style-7 input[type="password"],
  .form-style-7 textarea,
  .form-style-7 select 
  {
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    width: 100%;
    display: block;
    outline: none;
    border: none;
    height: 25px;
    line-height: 25px;
    font-size: 16px;
    padding: 0;
    font-family: Georgia, "Times New Roman", Times, serif;
    background-color: black;
    color: white;
  }
  .form-style-7 li > span{
    background: rgb(19, 4, 99);
    display: block;
    padding: 3px;
    margin: 0 -9px -9px -9px;
    text-align: center;
    color: rgb(255, 255, 255);
    font-family: Arial, Helvetica, sans-serif;
    font-size: 11px;
  }
  .form-style-7 textarea{
    resize:none;
  }
  .form-style-7 input[type="submit"],
  .form-style-7 input[type="button"]{
    background: rgb(214, 2, 2);
    border: none;
    padding: 10px 20px 10px 20px;
    border-bottom: 3px solid rgb(216, 83, 83);
    border-radius: 3px;
    color: #D2E2FF;
  }
  .form-style-7 input[type="submit"]:hover,
  .form-style-7 input[type="button"]:hover{
    background: rgb(216, 83, 83);
    color:#fff;
  }

  #singupForm .error {
    color: red;
}

div.error {
  width:200px;
  font-size:11px;
  background-color:black;
  color:#FFFFFF;
  padding:3px;
  margin-left:5px;
}

